--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -83,7 +83,7 @@ button.badge {
 }
 .form label {
   margin: 1rem 0;
-  display: block;
+  /* display: block; */
 }
 
 /* Dropdown */
@@ -114,4 +114,18 @@ button.badge {
 }
 .space {
   padding-left: 20px;
+}
+
+/* Checkout Steps */
+
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+.checkout-steps > div.active {
+  border-top-color: #f08000;
+  color: #f08000;
 }
