--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -140,3 +140,39 @@ input {
   border-top-color: #f08000;
   color: #f08000;
 }
+
+.none {
+  display: none;
+}
+#promo-code {
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+  border-radius: 5px;
+  /* border: 5px; */
+  border-width: thin;
+  /* border-style: none; */
+}
+.promo {
+  background-color: white;
+  padding-right: 3%;
+  /* padding-bottom: 25px; */
+  margin: 3px;
+  border-radius: 5px;
+  font-size: 80%;
+}
+.flex {
+  display: flex;
+  /* justify-content: space-between; */
+  /* align-items: flex-start; */
+  float: right;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .flex {
+    flex-direction: column;
+  }
+  .row {
+    flex-direction: column;
+  }
+}
