--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,6 +78,9 @@ button.badge {
 .primary {
   height: 40px;
 }
+button.small {
+  font-size: 1.2rem;
+}
 /* Form */
 
 .form {
@@ -175,4 +178,23 @@ input {
   .row {
     flex-direction: column;
   }
+}
+
+/* Table */
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table tbody tr:nth-of-type(odd) {
+  background-color: #f4f4f4;
+}
+.table td,
+.table th {
+  text-align: left;
+  border: 0.1rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+.table button {
+  margin: 0 0.2rem;
 }
